--- a/app/index.html.ejs
+++ b/app/index.html.ejs
@@ -11,7 +11,10 @@
     html,
     body,
     #app {
+      display: inline-block;
+      /* to avoid margin-collapsing */
       margin: 0;
+      width: 100%;
       height: 100%;
       font-family: Roboto;
       font-weight: 300;
@@ -20,7 +23,8 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="app">
+  </div>
 </body>
 
 </html>
